# Term.Cross

./: .gitignore  CMakeLists.txt  README_from_SD.txt  TERM.CROSS.kdev4  TODO.txt  cleancmake.sh  cmake.32.sh  cmake.64.sh  cmake.sh  cmake.static.32.sh  cmake.static.64.sh  cmake.static.msys.sh  cmake.static.sh  cmake.static.wogenmeta.64.sh  cmakeCB.sh  cmakeCB.static.sh  cmakeEclipse.32.sh  cmakeEclipse.64.sh  cmakeEclipse.static.32.sh  cmakeEclipse.static.64.sh  cmakeMinGW.static.sh  deps.txt  make_distrs.sh  tester.sh
.kdev4/: TERM.CROSS.kdev4
a02lev0/: CMakeLists.txt
a02lev0/include/: f34_uni.h  hrpt.h
a02lev0/src/: a02lev0.cpp  check_a0.cpp  path.cpp  unp810.cpp
aufitchip/: CMakeLists.txt
aufitchip/chipbase/: chipbase.box  regfiltrcloud.cfg  region.cil
aufitchip/chipbase/PARAMETRSFILTRCLOUDY.CFG/: filtr_10.cfg  filtr_11.cfg  filtr_12.cfg  filtr_2.cfg  filtr_3.cfg  filtr_4.cfg  filtr_5.cfg  filtr_6.cfg  filtr_7.cfg  filtr_8.cfg  filtr_9.cfg
aufitchip/etc/: aufitchip.cfg  aufitchip.cfg.in
aufitchip/include/: anglescan.hpp  astronom.hpp  aufit_mask.hpp  aufitchip.h  aufitchip.hpp  contour.hpp  filtrcloudy.hpp  kr_stjudent.hpp  tdchip.hpp  torbcorr.hpp  tregfiltrcloudy.hpp
aufitchip/src/: astronom.cpp  aufit_mask.cpp  aufitchip.cpp  contour.cpp  filtrcloudy.cpp  kr_stjudent.cpp  torbcorr.cpp  tregfiltrcloudy.cpp
b0/: CMakeLists.txt
b0/src/: b0.cpp  b0info.cpp  genmeta.cpp
c_lib/: CMakeLists.txt
c_lib/include/: c_lib.hpp
c_lib/include/c_lib/: c_b0.hpp  c_b0gms.hpp  c_b0noaa.hpp  c_b0proj.hpp  c_cfg.hpp  c_const.hpp  c_except.hpp  c_log.hpp  c_misc.hpp  c_sattbl.hpp  c_slst.hpp  c_str.hpp  c_types.hpp  strformat.hpp
c_lib/src/: c_cfg.cpp  c_except.cpp  c_log.cpp  c_misc.cpp  c_sattbl.cpp  c_str.cpp
clearedRatio/: clearedRatio.cpp
etc/: CMakeLists.txt  aufitchip.cfg
etc/cfg/: JapSea_old.cfg  Kuril_old.cfg  NWPac_old.cfg  Och_NWPO_old.cfg  OkhSea_old.cfg  default.cfg  japsea.cfg  log.cfg  unp.cfg
hrpt/: CMakeLists.txt
hrpt/include/: hrpt.hpp  hrptconst.hpp
hrpt/src/: build_mask_hrpt.cpp  hrpt.cpp  unp810.cpp
include/: Makefile.incl  config.h  config.h.in  config.h.orig  tc_config.h
log/: CMakeLists.txt
log/include/: ConsoleLogAppender.hpp  EConsoleLogAppender.hpp  EventLogAppender.hpp  FileLogAppender.hpp  Log.hpp  LogAppender.hpp  Utility.hpp
log/src/: ConsoleLogAppender.cpp  EConsoleLogAppender.cpp  EventLogAppender.cpp  FileLogAppender.cpp  Log.cpp  LogAppender.cpp  Utility.cpp
log/test/: LogDriver.cpp
misc/: gen_meta.cpp  hrpt2png.cpp  trashcode
noaautil/: CMakeLists.txt
noaautil/include/: h2old.hpp  hprj.hpp  hunp.hpp
noaautil/src/: h2old.cpp  hprj.cpp  hunp.cpp
nrc/: CMakeLists.txt
nrc/include/: nrc.hpp
nrc/src/: brent.cpp  dfridr.cpp  f1dim.cpp  linmin.cpp  lubksb.cpp  ludcmp.cpp  mnbrak.cpp  powell.cpp  rtbis.cpp
orbmodel/: CMakeLists.txt
orbmodel/include/: orbconst.h  orbmodel.hpp
orbmodel/src/: orbmodel.cpp  ref_inv.cpp  ref_str.cpp  torbmod.cpp
sd_util/: CMakeLists.txt
sd_util/data/: noaa16sst.doc
sd_util/etc/: default.cfg  default2.cfg
sd_util/etc/bkp/: multich.diff  multich_24_04_2006.cpp  multich_os2.cpp
sd_util/include/: astronom.hpp  auto_ptr.hpp  calibr.hpp  filtr.hpp  filtr2.hpp  multich.hpp  xml.hpp
sd_util/src/: astronom.cpp  calibr.cpp  fcalibr.cpp  filtr.cpp  filtr2.cpp  multich.cpp  xml.cpp
strformat/: CMakeLists.txt  strformat.cpp
tests/: CMakeLists.txt
tests/cfg/: CMakeLists.txt  cfgtest.cpp  unp.cfg
tests/png/: CMakeLists.txt  pngexample.cpp  pngtest.cpp
tests/testsgp84/: Makefile  build_debug.bat  build_debug.cmd  build_debug.sh  build_release.bat  build_release.cmd  build_release.sh
tests/testsgp84/etc/: orbmod2.h  t_sgp8.c_
tests/testsgp84/release_lnx/: out
tests/testsgp84/src/: testsgp84.cpp
tests/testsplit/: Makefile  build_debug.bat  build_debug.cmd  build_debug.sh  build_release.bat  build_release.cmd  build_release.sh
tests/testsplit/src/: testsplit.cpp
tests/tstsgp4o/: mk.sh  t_sgp4.c  t_sgp4f.c
tests/tstsgp4o/bkp/: t_sgp4f  t_sgp4f.c
tests/tstsgp8o/: f34_uni.h  orbmod2.h  orbmodel.c  out.osgp8  out.txt  out1.txt  out3.txt  out4.txt  t_sgp8.c  t_sgp8f.out
tests/tstsgp8o/old/: f34_uni.h  ij2ll.c  orbmod2.h  orbmodel.c  t_sgp8.c  vec_fun.h
tests/tt/: 123  123.1  2  321  321.1  f34_uni.h  t_sgp4f.c
tests/tt2/: demo_use.cpp  script_static  script_static.bat  script_static.cmd  tt.cpp
tgdb/: CMakeLists.txt  region.cil
tgdb/etc/: tgdbdirect.cpp
tgdb/include/: tgdb.hpp
tgdb/src/: region.cpp  tgdb.cpp
tgdb/util/: makecpp.cpp
y_util/: CMakeLists.txt
y_util/include/: y_util.hpp
y_util/include/y_util/: o_time.hpp  y_data.hpp  y_maskff.hpp  y_math.hpp  y_memdrw.hpp  y_pcx.hpp  y_prjmap.hpp  y_time.hpp
y_util/src/: o_time.cpp  y_data.cpp  y_math.cpp  y_math_min.cpp  y_math_stat.cpp  y_memdrw_fill.cpp  y_memdrw_vector.cpp  y_pcx.cpp  y_prjmap.cpp  y_time.cpp
